# harmony_playground

./: Cargo.toml  ROADMAP.md
fonts/: icons.toml
src/: icon.rs  lib.rs  main.rs
src/audio/: engine.rs  mod.rs  synthesizer.rs  theory.rs
src/gui/: error.rs  global_frequency.rs  mod.rs  relative_frequency.rs  save_dialog.rs  theme.rs
